--- a/news.html
+++ b/news.html
@@ -10,32 +10,15 @@
     body { font-family: 'Poppins', sans-serif; }
     .hero-bg { background: linear-gradient(135deg, #2563eb, #9333ea); }
     .news-card:hover { transform: translateY(-5px); transition: all 0.3s; }
-    .filter-btn {
-      background: #f3f4f6;
-      color: #374151;
-      border: 1px solid #e5e7eb;
-      cursor: pointer;
-    }
-    .filter-btn:hover {
-      background: #e0e7ff;
-      color: #4338ca;
-      transform: translateY(-2px);
-    }
-    .active-filter {
-      background: linear-gradient(135deg, #2563eb, #9333ea);
-      color: white !important;
-      border: none;
-      font-weight: 600;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-    }
+    .active-filter { background-color: #2563eb; color: white; }
   </style>
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-gray-50 text-gray-900 flex flex-col min-h-screen">
 
   <!-- Navbar -->
-  <nav class="flex justify-between items-center p-6 bg-white shadow">
+  <nav class="flex justify-between items-center p-6 bg-white shadow flex-wrap">
     <h1 class="text-2xl font-bold text-indigo-700">CastroHub</h1>
-    <ul class="hidden md:flex gap-6 font-medium">
+    <ul class="hidden md:flex gap-6 font-medium flex-wrap">
       <li><a href="index.html" class="hover:text-indigo-600">Home</a></li>
       <li><a href="about.html" class="hover:text-indigo-600">About</a></li>
       <li><a href="news.html" class="text-indigo-600 font-bold">News</a></li>
@@ -47,147 +30,91 @@
     </ul>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Hero -->
   <section class="hero-bg text-white text-center py-20 px-6">
     <h2 class="text-5xl font-bold mb-4">CastroHub News</h2>
-    <p class="text-lg md:text-xl">Stay informed with updates across Tech, Education, Lifestyle, Sports, Entertainment, and more.</p>
+    <p class="text-lg md:text-xl">Stay updated with the latest happenings in Tech, Education, Lifestyle, Sports, and more.</p>
   </section>
 
   <!-- Search & Filters -->
   <section class="max-w-6xl mx-auto py-10 px-6">
-    <div class="flex flex-col md:flex-row justify-between items-center gap-4 mb-8">
-      <!-- Search -->
-      <input type="text" id="searchInput" placeholder="🔍 Search news..." 
-             class="w-full md:w-1/2 border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none shadow-sm">
-
-      <!-- Filters -->
-      <div class="flex flex-wrap gap-2" id="filterContainer">
-        <button class="filter-btn active-filter px-4 py-2 rounded-full transition-all duration-300 shadow-sm" data-category="all">All</button>
-        <button class="filter-btn px-4 py-2 rounded-full transition-all duration-300 shadow-sm" data-category="Tech">Tech</button>
-        <button class="filter-btn px-4 py-2 rounded-full transition-all duration-300 shadow-sm" data-category="Education">Education</button>
-        <button class="filter-btn px-4 py-2 rounded-full transition-all duration-300 shadow-sm" data-category="Sports">Sports</button>
-        <button class="filter-btn px-4 py-2 rounded-full transition-all duration-300 shadow-sm" data-category="Lifestyle">Lifestyle</button>
-        <button class="filter-btn px-4 py-2 rounded-full transition-all duration-300 shadow-sm" data-category="Entertainment">Entertainment</button>
-        <button class="filter-btn px-4 py-2 rounded-full transition-all duration-300 shadow-sm" data-category="Global">Global</button>
+    <div class="flex flex-col md:flex-row justify-between items-center gap-4 mb-8 flex-wrap">
+      <input type="text" id="searchInput" placeholder="Search news..." 
+             class="w-full md:w-1/2 border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none">
+      <div class="flex flex-wrap gap-2 mt-4 md:mt-0" id="filterButtons">
+        <button class="filter-btn px-4 py-2 rounded-lg active-filter" data-category="all">All</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Tech">Tech</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Education">Education</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Sports">Sports</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Lifestyle">Lifestyle</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Entertainment">Entertainment</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Global">Global</button>
       </div>
     </div>
   </section>
 
-  <!-- Featured News -->
-  <section class="max-w-6xl mx-auto px-6 mb-12" id="featuredNews"></section>
-
   <!-- News Grid -->
   <section class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 lg:grid-cols-3 gap-8 mb-16" id="newsGrid">
-    <!-- News will be injected here -->
+    <!-- News cards will be rendered here dynamically -->
   </section>
 
   <!-- Load More -->
   <div class="text-center mb-16">
-    <button id="loadMoreBtn" class="px-6 py-3 bg-indigo-600 text-white rounded-lg font-semibold hover:bg-indigo-700">Load More</button>
+    <button class="px-6 py-3 bg-indigo-600 text-white rounded-lg font-semibold hover:bg-indigo-700">Load More</button>
   </div>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-gray-400 py-6 text-center">
+  <footer class="bg-gray-900 text-gray-400 py-6 text-center mt-auto">
     <p>&copy; 2025 CastroHub. All Rights Reserved.</p>
     <p>Contact: <a href="mailto:castrodhiambo3@gmail.com" class="text-indigo-400">castrodhiambo3@gmail.com</a> | WhatsApp: 0759130506</p>
   </footer>
 
   <!-- Scripts -->
   <script>
-    const filterButtons = document.querySelectorAll('.filter-btn');
-    const newsGrid = document.getElementById('newsGrid');
-    const featuredNews = document.getElementById('featuredNews');
-    const searchInput = document.getElementById('searchInput');
-    const loadMoreBtn = document.getElementById('loadMoreBtn');
-
-    let newsData = [];
-    let displayedCount = 0;
-    const perPage = 6;
-
-    // Fetch news from JSON
-    async function fetchNews() {
-      try {
-        const response = await fetch('news.json');
-        newsData = await response.json();
-        renderFeatured();
-        renderNews();
-      } catch (err) {
-        console.error('Error loading news.json', err);
-      }
-    }
-
-    function renderFeatured() {
-      if(newsData.length > 0) {
-        const item = newsData[0];
-        featuredNews.innerHTML = `
-          <div class="bg-white shadow-lg rounded-xl overflow-hidden flex flex-col md:flex-row">
-            <img src="${item.image}" alt="${item.title}" class="w-full md:w-1/2 object-cover">
-            <div class="p-6 flex flex-col justify-center">
-              <span class="bg-indigo-100 text-indigo-700 px-3 py-1 rounded-full text-sm font-semibold mb-3">${item.category}</span>
-              <h3 class="text-2xl font-bold mb-3">${item.title}</h3>
-              <p class="text-gray-600 mb-4">${item.description}</p>
+    // Load news from JSON
+    fetch('news.json')
+      .then(res => res.json())
+      .then(data => {
+        const newsGrid = document.getElementById('newsGrid');
+        data.forEach(item => {
+          newsGrid.innerHTML += `
+            <div class="news-card bg-white rounded-lg shadow p-5" data-category="${item.category}">
+              <img src="${item.image}" alt="${item.title}" class="rounded-lg mb-4 w-full h-48 object-cover">
+              <span class="bg-indigo-100 text-indigo-700 px-3 py-1 rounded-full text-sm font-semibold">${item.category}</span>
+              <h4 class="text-xl font-bold mt-2 mb-2">${item.title}</h4>
+              <p class="text-gray-600 mb-3">${item.summary}</p>
               <a href="${item.link}" class="text-indigo-600 font-semibold hover:underline">Read More →</a>
             </div>
-          </div>`;
-      }
-    }
+          `;
+        });
 
-    function renderNews(filter = "all", query = "") {
-      newsGrid.innerHTML = "";
-      let filtered = newsData.slice(1); // exclude featured
+        // Filter functionality
+        const filterButtons = document.querySelectorAll('.filter-btn');
+        const newsCards = document.querySelectorAll('.news-card');
+        const searchInput = document.getElementById('searchInput');
 
-      if (filter !== "all") {
-        filtered = filtered.filter(n => n.category === filter);
-      }
+        filterButtons.forEach(btn => {
+          btn.addEventListener('click', () => {
+            document.querySelector('.active-filter').classList.remove('active-filter');
+            btn.classList.add('active-filter');
+            const category = btn.dataset.category;
+            newsCards.forEach(card => {
+              const cardCat = card.dataset.category;
+              card.style.display = (category === 'all' || cardCat === category) ? 'block' : 'none';
+            });
+          });
+        });
 
-      if (query) {
-        filtered = filtered.filter(n => n.title.toLowerCase().includes(query) || n.description.toLowerCase().includes(query));
-      }
-
-      const slice = filtered.slice(displayedCount, displayedCount + perPage);
-      slice.forEach(item => {
-        newsGrid.innerHTML += `
-          <div class="news-card bg-white rounded-lg shadow p-5" data-category="${item.category}">
-            <img src="${item.image}" alt="${item.title}" class="rounded-lg mb-4">
-            <span class="px-3 py-1 rounded-full text-sm font-semibold 
-              ${item.category === 'Tech' ? 'bg-blue-100 text-blue-700' :
-                item.category === 'Education' ? 'bg-green-100 text-green-700' :
-                item.category === 'Sports' ? 'bg-red-100 text-red-700' :
-                item.category === 'Lifestyle' ? 'bg-pink-100 text-pink-700' :
-                item.category === 'Entertainment' ? 'bg-yellow-100 text-yellow-700' :
-                'bg-purple-100 text-purple-700'}">${item.category}</span>
-            <h4 class="text-xl font-bold mt-2 mb-2">${item.title}</h4>
-            <p class="text-gray-600 mb-3">${item.description}</p>
-            <a href="${item.link}" class="text-indigo-600 font-semibold hover:underline">Read More →</a>
-          </div>`;
-      });
-
-      displayedCount += slice.length;
-      loadMoreBtn.style.display = displayedCount >= filtered.length ? "none" : "inline-block";
-    }
-
-    // Filter buttons
-    filterButtons.forEach(btn => {
-      btn.addEventListener('click', () => {
-        filterButtons.forEach(b => b.classList.remove("active-filter"));
-        btn.classList.add("active-filter");
-        displayedCount = 0;
-        renderNews(btn.dataset.category, searchInput.value.toLowerCase());
-      });
-    });
-
-    // Search
-    searchInput.addEventListener('input', () => {
-      displayedCount = 0;
-      renderNews(document.querySelector('.active-filter').dataset.category, searchInput.value.toLowerCase());
-    });
-
-    // Load More
-    loadMoreBtn.addEventListener('click', () => {
-      renderNews(document.querySelector('.active-filter').dataset.category, searchInput.value.toLowerCase());
-    });
-
-    fetchNews();
+        // Search functionality
+        searchInput.addEventListener('input', () => {
+          const query = searchInput.value.toLowerCase();
+          newsCards.forEach(card => {
+            const text = card.innerText.toLowerCase();
+            card.style.display = text.includes(query) ? 'block' : 'none';
+          });
+        });
+      })
+      .catch(err => console.error('Error loading news:', err));
   </script>
 </body>
 </html>
