--- a/projects.html
+++ b/projects.html
@@ -5,16 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CastroHub | Projects</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://kit.fontawesome.com/a2e0e6ad65.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Poppins', sans-serif; }
+    .card:hover { transform: translateY(-5px); transition: all 0.3s; }
+    .active-filter { background-color: #facc15; color: #1f2937; }
+  </style>
 </head>
 <body class="bg-gray-100 text-gray-900 flex flex-col min-h-screen">
 
-  <!-- Header -->
+  <!-- Navbar -->
   <header class="bg-gradient-to-r from-blue-600 to-indigo-700 text-white shadow-lg">
-    <div class="container mx-auto flex justify-between items-center py-4 px-6">
+    <div class="container mx-auto flex justify-between items-center py-4 px-6 flex-wrap">
       <h1 class="text-2xl font-bold tracking-wide">CastroHub</h1>
       <nav>
-        <ul class="flex space-x-6">
+        <ul class="flex flex-wrap space-x-6">
           <li><a href="index.html" class="hover:text-yellow-300">Home</a></li>
           <li><a href="about.html" class="hover:text-yellow-300">About</a></li>
           <li><a href="news.html" class="hover:text-yellow-300">News</a></li>
@@ -32,46 +37,31 @@
   <section class="bg-blue-50 py-12 text-center">
     <h2 class="text-4xl font-bold text-blue-700">My Projects</h2>
     <p class="mt-3 text-gray-600 max-w-2xl mx-auto">
-      Explore some of the exciting projects I’ve built and contributed to — from web apps to AI experiments.
+      Explore exciting projects I’ve built — from web apps to AI experiments.
     </p>
   </section>
 
   <!-- Filters & Search -->
   <section class="container mx-auto px-6 mt-8">
     <div class="flex flex-col md:flex-row md:justify-between md:items-center bg-white p-4 rounded-lg shadow">
-      <div class="flex space-x-4">
-        <select id="projectCategory" class="border rounded px-3 py-2">
-          <option value="all">All Categories</option>
-          <option value="web">Web Development</option>
-          <option value="ai">AI & Machine Learning</option>
-          <option value="education">Education</option>
-          <option value="design">Design</option>
-        </select>
+      <div class="flex space-x-4 flex-wrap">
+        <button class="filter-btn px-4 py-2 rounded-lg active-filter" data-category="all">All</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="web">Web Development</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="ai">AI & ML</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="education">Education</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="design">Design</button>
       </div>
       <div class="mt-4 md:mt-0">
         <input id="projectSearch" type="text" placeholder="Search projects..." 
-               class="border rounded px-3 py-2 w-64">
+               class="border rounded px-3 py-2 w-64 focus:ring-2 focus:ring-yellow-400 focus:outline-none">
       </div>
     </div>
   </section>
 
   <!-- Project Grid -->
   <section class="container mx-auto px-6 mt-10 grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id="projectGrid">
-    <!-- Projects will load here from JSON -->
+    <!-- Cards dynamically generated -->
   </section>
-
-  <!-- Modal -->
-  <div id="projectModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
-    <div class="bg-white rounded-lg shadow-lg max-w-lg w-full p-6 relative">
-      <button id="closeModal" class="absolute top-2 right-2 text-gray-500 hover:text-gray-800">
-        <i class="fas fa-times text-xl"></i>
-      </button>
-      <img id="modalImage" src="" alt="Project Image" class="w-full h-48 object-cover rounded">
-      <h3 id="modalTitle" class="text-2xl font-bold mt-4"></h3>
-      <p id="modalDescription" class="text-gray-700 mt-2"></p>
-      <a id="modalLink" href="#" target="_blank" class="inline-block mt-4 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 hidden">View Project</a>
-    </div>
-  </div>
 
   <!-- Footer -->
   <footer class="bg-gray-900 text-gray-300 py-6 mt-auto">
@@ -80,84 +70,51 @@
     </div>
   </footer>
 
-  <!-- Script -->
+  <!-- Scripts -->
   <script>
-    const projectCategory = document.getElementById('projectCategory');
-    const projectSearch = document.getElementById('projectSearch');
-    const projectGrid = document.getElementById('projectGrid');
-    let projects = [];
-
-    // Modal elements
-    const modal = document.getElementById("projectModal");
-    const modalImage = document.getElementById("modalImage");
-    const modalTitle = document.getElementById("modalTitle");
-    const modalDescription = document.getElementById("modalDescription");
-    const modalLink = document.getElementById("modalLink");
-    const closeModal = document.getElementById("closeModal");
-
-    // Fetch projects from JSON
-    async function loadProjects() {
-      const response = await fetch('projects.json');
-      projects = await response.json();
-      displayProjects(projects);
-    }
-
-    // Render projects dynamically
-    function displayProjects(projectsToShow) {
-      projectGrid.innerHTML = "";
-      projectsToShow.forEach(project => {
-        const card = document.createElement("div");
-        card.className = "bg-white rounded-lg shadow overflow-hidden project-card cursor-pointer hover:scale-105 transform transition";
-        card.dataset.category = project.category;
-        card.innerHTML = `
-          <img src="${project.image}" alt="${project.title}" class="w-full h-40 object-cover">
-          <div class="p-4">
-            <h3 class="text-lg font-semibold">${project.title}</h3>
-            <p class="text-sm text-gray-600 mb-2">${project.description}</p>
-            <span class="text-xs px-2 py-1 rounded ${
-              project.category === "web" ? "bg-blue-100 text-blue-700" :
-              project.category === "ai" ? "bg-purple-100 text-purple-700" :
-              project.category === "education" ? "bg-green-100 text-green-700" :
-              "bg-pink-100 text-pink-700"
-            }">${project.tag}</span>
-          </div>
-        `;
-
-        // Open modal on click
-        card.addEventListener("click", () => {
-          modalImage.src = project.image;
-          modalTitle.textContent = project.title;
-          modalDescription.textContent = project.description;
-          if (project.link) {
-            modalLink.href = project.link;
-            modalLink.classList.remove("hidden");
-          } else {
-            modalLink.classList.add("hidden");
-          }
-          modal.classList.remove("hidden");
+    fetch('projects.json')
+      .then(res => res.json())
+      .then(data => {
+        const grid = document.getElementById('projectGrid');
+        data.forEach(project => {
+          grid.innerHTML += `
+            <div class="card bg-white rounded-lg shadow overflow-hidden p-4" data-category="${project.category}">
+              <img src="${project.image}" alt="${project.title}" class="w-full h-40 object-cover rounded mb-4">
+              <h3 class="text-lg font-semibold">${project.title}</h3>
+              <p class="text-sm text-gray-600 mb-2">${project.description}</p>
+              <span class="text-xs px-2 py-1 rounded-full font-semibold ${project.category === 'web' ? 'bg-blue-100 text-blue-700' :
+                                                                          project.category === 'ai' ? 'bg-purple-100 text-purple-700' :
+                                                                          project.category === 'education' ? 'bg-green-100 text-green-700' :
+                                                                          'bg-pink-100 text-pink-700'}">${project.category}</span>
+            </div>
+          `;
         });
 
-        projectGrid.appendChild(card);
-      });
-    }
+        const filterBtns = document.querySelectorAll('.filter-btn');
+        const cards = document.querySelectorAll('.card');
+        const searchInput = document.getElementById('projectSearch');
 
-    // Filter projects
-    function filterProjects() {
-      const category = projectCategory.value;
-      const search = projectSearch.value.toLowerCase();
-      const filtered = projects.filter(p =>
-        (category === "all" || p.category === category) &&
-        (p.title.toLowerCase().includes(search) || p.description.toLowerCase().includes(search))
-      );
-      displayProjects(filtered);
-    }
+        // Filter by category
+        filterBtns.forEach(btn => {
+          btn.addEventListener('click', () => {
+            document.querySelector('.active-filter').classList.remove('active-filter');
+            btn.classList.add('active-filter');
+            const category = btn.dataset.category;
+            cards.forEach(card => {
+              card.style.display = (category === 'all' || card.dataset.category === category) ? 'block' : 'none';
+            });
+          });
+        });
 
-    projectCategory.addEventListener("change", filterProjects);
-    projectSearch.addEventListener("input", filterProjects);
-    closeModal.addEventListener("click", () => modal.classList.add("hidden"));
-    modal.addEventListener("click", (e) => { if (e.target === modal) modal.classList.add("hidden"); });
-
-    loadProjects();
+        // Search functionality
+        searchInput.addEventListener('input', () => {
+          const query = searchInput.value.toLowerCase();
+          cards.forEach(card => {
+            card.style.display = card.innerText.toLowerCase().includes(query) ? 'block' : 'none';
+          });
+        });
+      })
+      .catch(err => console.error("Error loading projects:", err));
   </script>
 </body>
 </html>
