--- a/mindspark.html
+++ b/mindspark.html
@@ -1,117 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MindSpark TV | CastroHub</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <title>MindSpark TV - CastroHub</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Inter', sans-serif; margin: 0; background: #f4f6f9; }
-    header { background: linear-gradient(90deg,#ff5722,#ff9800); padding:20px; text-align:center; color:white; }
-    nav ul { list-style:none; display:flex; justify-content:center; gap:25px; padding:0; margin:10px 0 0; }
-    nav a { color:white; text-decoration:none; font-weight:600; }
-    nav a:hover { text-decoration:underline; }
-    .container { max-width:1200px; margin:20px auto; padding:20px; }
-    .player { text-align:center; margin-bottom:30px; }
-    .player iframe { width:100%; max-width:800px; height:450px; border-radius:12px; border:none; box-shadow:0 3px 8px rgba(0,0,0,0.2); }
-    h2 { margin:20px 0; color:#333; }
-    .search-bar { margin:20px 0; text-align:center; }
-    .search-bar input { width:70%; padding:10px; border-radius:8px; border:1px solid #ccc; }
-    .videos { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
-    .card { background:white; border-radius:12px; padding:15px; box-shadow:0 2px 6px rgba(0,0,0,0.1); cursor:pointer; transition:transform 0.2s; }
-    .card:hover { transform:translateY(-5px); }
-    .card img { width:100%; border-radius:8px; margin-bottom:10px; }
-    footer { text-align:center; padding:20px; margin-top:40px; font-size:0.9rem; color:#777; background:#f1f1f1; }
+    body { font-family: 'Poppins', sans-serif; }
+    .card:hover { transform: translateY(-5px); transition: all 0.3s; }
+    .active-filter { background-color: #fbbf24; color: #1f2937; }
+    .video-iframe { width: 100%; height: 220px; border-radius: 0.5rem; }
   </style>
 </head>
-<body>
+<body class="bg-gray-50 text-gray-900 flex flex-col min-h-screen">
 
-<header>
-  <h2>📺 MindSpark TV on CastroHub</h2>
-  <nav>
-    <ul>
-      <li><a href="index.html">🏠 Home</a></li>
-      <li><a href="about.html">👤 About</a></li>
-      <li><a href="news.html">📰 News</a></li>
-      <li><a href="entertainment.html">🎬 Entertainment</a></li>
-      <li><a href="education.html">📚 Education</a></li>
-      <li><a href="projects.html">💼 Projects</a></li>
-      <li><a href="mindspark.html">📺 MindSpark TV</a></li>
-      <li><a href="contact.html">✉️ Contact</a></li>
-    </ul>
-  </nav>
-</header>
+  <!-- Navbar -->
+  <header class="bg-gradient-to-r from-purple-600 to-pink-600 text-white shadow-lg">
+    <div class="container mx-auto flex justify-between items-center py-4 px-6 flex-wrap">
+      <h1 class="text-2xl font-bold tracking-wide">CastroHub</h1>
+      <nav>
+        <ul class="flex flex-wrap space-x-6">
+          <li><a href="index.html" class="hover:text-yellow-300">Home</a></li>
+          <li><a href="about.html" class="hover:text-yellow-300">About</a></li>
+          <li><a href="news.html" class="hover:text-yellow-300">News</a></li>
+          <li><a href="entertainment.html" class="hover:text-yellow-300">Entertainment</a></li>
+          <li><a href="education.html" class="hover:text-yellow-300">Education</a></li>
+          <li><a href="projects.html" class="hover:text-yellow-300">Projects</a></li>
+          <li><a href="mindspark.html" class="font-semibold text-yellow-300">MindSpark TV</a></li>
+          <li><a href="contact.html" class="hover:text-yellow-300">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-<div class="container">
-  <!-- Featured Player -->
-  <div class="player" id="video-player">
-    <iframe src="" allowfullscreen></iframe>
-    <h3 id="video-title"></h3>
-    <p id="video-description"></p>
-  </div>
+  <!-- Hero Section -->
+  <section class="bg-gradient-to-r from-purple-400 to-pink-400 py-16 text-center text-white">
+    <h2 class="text-5xl font-bold mb-4">MindSpark TV</h2>
+    <p class="text-lg md:text-xl max-w-2xl mx-auto">
+      Stream the latest videos, educational content, and entertainment from CastroHub’s MindSpark TV.
+    </p>
+  </section>
 
-  <!-- Search -->
-  <div class="search-bar">
-    <input type="text" id="search" placeholder="🔍 Search videos by title...">
-  </div>
+  <!-- Filters & Search -->
+  <section class="container mx-auto px-6 mt-10">
+    <div class="flex flex-col md:flex-row justify-between items-center bg-white p-4 rounded-lg shadow flex-wrap gap-4">
+      <div class="flex flex-wrap gap-2">
+        <button class="filter-btn px-4 py-2 rounded-lg active-filter" data-category="all">All</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Education">Education</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Tech">Tech</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Entertainment">Entertainment</button>
+        <button class="filter-btn px-4 py-2 rounded-lg" data-category="Music">Music</button>
+      </div>
+      <div class="mt-4 md:mt-0">
+        <input id="videoSearch" type="text" placeholder="Search videos..." 
+               class="border rounded px-3 py-2 w-64 focus:ring-2 focus:ring-yellow-400 focus:outline-none">
+      </div>
+    </div>
+  </section>
 
-  <!-- Video Sections -->
-  <div id="video-sections"></div>
-</div>
+  <!-- Video Grid -->
+  <section class="container mx-auto px-6 mt-8 grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4" id="videoGrid">
+    <!-- Videos loaded dynamically -->
+  </section>
 
-<footer>
-  &copy; 2025 CastroHub | Powered by MindSpark TV
-</footer>
+  <!-- Footer -->
+  <footer class="bg-gray-900 text-gray-300 py-6 mt-auto text-center">
+    <p>&copy; 2025 CastroHub. All rights reserved.</p>
+  </footer>
 
-<script>
-  async function loadMindspark() {
-    const res = await fetch("mindspark.json");
-    const data = await res.json();
-
-    // Load featured video
-    const player = document.querySelector("#video-player iframe");
-    document.getElementById("video-title").innerText = data.featured.title;
-    document.getElementById("video-description").innerText = data.featured.description;
-    player.src = data.featured.videoUrl;
-
-    // Render categories
-    const sections = document.getElementById("video-sections");
-    data.categories.forEach(category => {
-      const section = document.createElement("div");
-      section.innerHTML = `<h2>${category.name}</h2><div class="videos"></div>`;
-      const videoGrid = section.querySelector(".videos");
-
-      category.videos.forEach(video => {
-        const card = document.createElement("div");
-        card.classList.add("card");
-        card.innerHTML = `
-          <img src="${video.thumbnail}" alt="${video.title}">
-          <h4>${video.title}</h4>
-        `;
-        card.addEventListener("click", () => {
-          player.src = video.videoUrl;
-          document.getElementById("video-title").innerText = video.title;
-          document.getElementById("video-description").innerText = category.name;
-          window.scrollTo({ top: 0, behavior: "smooth" });
+  <!-- Scripts -->
+  <script>
+    fetch('mindspark.json')
+      .then(res => res.json())
+      .then(data => {
+        const grid = document.getElementById('videoGrid');
+        data.forEach(video => {
+          grid.innerHTML += `
+            <div class="card bg-white rounded-lg shadow overflow-hidden p-4" data-category="${video.category}">
+              <iframe class="video-iframe" src="${video.url}" allowfullscreen></iframe>
+              <h3 class="text-lg font-semibold mt-2">${video.title}</h3>
+              <span class="text-xs px-2 py-1 rounded-full font-semibold 
+                ${video.category === 'Education' ? 'bg-green-100 text-green-700' :
+                  video.category === 'Tech' ? 'bg-blue-100 text-blue-700' :
+                  video.category === 'Entertainment' ? 'bg-yellow-100 text-yellow-700' :
+                  'bg-pink-100 text-pink-700'}">
+                ${video.category}
+              </span>
+            </div>
+          `;
         });
-        videoGrid.appendChild(card);
-      });
 
-      sections.appendChild(section);
-    });
+        const filterBtns = document.querySelectorAll('.filter-btn');
+        const cards = document.querySelectorAll('.card');
+        const searchInput = document.getElementById('videoSearch');
 
-    // Search functionality
-    document.getElementById("search").addEventListener("input", e => {
-      const term = e.target.value.toLowerCase();
-      document.querySelectorAll(".card").forEach(card => {
-        const title = card.querySelector("h4").innerText.toLowerCase();
-        card.style.display = title.includes(term) ? "block" : "none";
-      });
-    });
-  }
+        filterBtns.forEach(btn => {
+          btn.addEventListener('click', () => {
+            document.querySelector('.active-filter').classList.remove('active-filter');
+            btn.classList.add('active-filter');
+            const category = btn.dataset.category;
+            cards.forEach(card => {
+              card.style.display = (category === 'all' || card.dataset.category === category) ? 'block' : 'none';
+            });
+          });
+        });
 
-  loadMindspark();
-</script>
-
+        searchInput.addEventListener('input', () => {
+          const query = searchInput.value.toLowerCase();
+          cards.forEach(card => {
+            card.style.display = card.innerText.toLowerCase().includes(query) ? 'block' : 'none';
+          });
+        });
+      })
+      .catch(err => console.error("Error loading videos:", err));
+  </script>
 </body>
 </html>
